--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -136,7 +136,7 @@ jobs:
         if: env.RUN_TYPE == 'garmin'
         run: |
           # make garimin secret string `python run_page/get_garmin_secret.py ${email} ${password}
-          python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING }}
+          python run_page/garmin_sync.py --only-run ${{ secrets.GARMIN_SECRET_STRING }}
         # If you only want to sync `type running` add args --only-run, default script is to sync all data (rides and runs).
         # python run_page/garmin_sync.py ${{ secrets.GARMIN_SECRET_STRING }} --only-run
 
